--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -12,9 +12,9 @@
   }
 }
 .skills h1, .skills span {
-  font-family: "Beau Rivage";
+  font-family: "Tiro Devanagari Sanskrit", serif;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   font-size: 50px;
   line-height: 56px;
 }
