--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -26,8 +26,9 @@ body {
   font-size: 30px;
   line-height: 33px;
   text-decoration: none;
-  font-family: "Aladin", cursive;
+  font-family: "Tiro Devanagari Sanskrit", serif;
   color: #828282;
+  text-align: center;
 }
 .menu a:hover {
   font-size: 33px;
@@ -65,7 +66,7 @@ body {
   }
 
   .menu-content {
-    font-family: "Aladin", cursive;
+    font-family: "Tiro Devanagari Sanskrit", serif;
     padding: 0 0 0 50px;
     max-height: 0;
     overflow: hidden;
@@ -97,7 +98,7 @@ body {
     color: #070707;
   }
   .collapsible-menu label {
-    font-family: "Sedgwick Ave Display", cursive;
+    font-family: "Tiro Devanagari Sanskrit", serif;
     font-size: 20px;
     display: block;
     cursor: pointer;
