--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -56,7 +56,7 @@ section {
   text-align: center;
   line-height: 30px;
   font-size: 25px;
-  font-family: "Aladin", cursive;
+  font-family: "Tiro Devanagari Sanskrit", serif;
   margin: 0;
 }
 .project a {
