--- a/src/scss/about-me.scss
+++ b/src/scss/about-me.scss
@@ -1,23 +1,20 @@
 .about-me {
     background-color: #F6F6F6;
-    padding: 80px 0 110px;
+    padding: 50px 0 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     max-width: 100%;
-    height: 100%;
+    height: calc(100vh - 187px);
     
     h1 {
         margin: 0;
-        margin-bottom: 18px;
-        font-family: 'Beau Rivage';
+        margin-bottom: 30px;
+        font-family: 'Tiro Devanagari Sanskrit', serif;
         font-size: 50px;
         line-height: 56px;
         text-align: center;
         color: #070707;
     }
-
-    
 
     &_text {
         margin: 0 calc(100vw - 85%);
