--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -60,7 +60,7 @@ section {
     text-align: center;
     line-height: 30px;
     font-size: 25px;
-    font-family: "Aladin", cursive;
+    font-family: 'Tiro Devanagari Sanskrit', serif;
     margin: 0;
 
     a {
