--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -11,9 +11,9 @@
     
 
     h1, span {
-        font-family: 'Beau Rivage';
+        font-family: 'Tiro Devanagari Sanskrit', serif;
         margin: 0;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         font-size: 50px;
         line-height: 56px;
 
