--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -11,7 +11,7 @@ body {
 .menu {
   display: grid;
   justify-content: space-between;
-  grid-template-columns: repeat(5, 110px);
+  grid-template-columns: repeat(5, 140px);
   padding-top: 35px;
   padding-bottom: 35px;
   margin: 0 calc(100vw - 85%);
@@ -21,6 +21,9 @@ body {
   list-style-type: none;
   display: flex;
   justify-content: center;
+}
+.menu li .blackout {
+  color: black;
 }
 .menu a {
   font-size: 30px;
