--- a/src/css/skills.css
+++ b/src/css/skills.css
@@ -17,6 +17,7 @@
   margin-bottom: 20px;
   font-size: 50px;
   line-height: 56px;
+  text-align: center;
 }
 @media screen and (max-width: 1070px) {
   .skills h1, .skills span {
