--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -5,17 +5,18 @@
     flex-direction: column;
     align-items: center;
     color: black;
+
     @media screen and (max-width: 860px) {
         margin-top: 15px;
     }
     
-
     h1, span {
         font-family: 'Tiro Devanagari Sanskrit', serif;
         margin: 0;
         margin-bottom: 20px;
         font-size: 50px;
         line-height: 56px;
+        text-align: center;
 
         @media screen and (max-width: 1070px) {
             font-size: 40px;
