--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -49,8 +49,8 @@
         gap: 90px;
 
         .prog {
-            max-width: 180px;
-            max-height: 180px;
+            width: 140px;
+            height: 140px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -59,11 +59,6 @@
             -webkit-transition: all 0.5s ease;
                     transition: all 0.5s ease;
         }
-        .prog:hover {
-            border-radius: 25%;
-            -webkit-transform: rotate(360deg);
-                    transform: rotate(360deg);
-        }
 
         @media screen and (max-width: 1070px) {
             display: flex;
@@ -71,7 +66,5 @@
             justify-content: center;
             gap: 60px;
         }
-
-        
     }
 }
